Fixed label alignment.

--- a/assets/css/alert-wizard.scss
+++ b/assets/css/alert-wizard.scss
@@ -84,6 +84,8 @@
         .info {
           margin-right: 50px;
           flex-shrink: 0;
+          display: flex;
+          align-items: center;
         }
         .message-select {
           white-space: normal;
